# OpenGL

./: .gitignore  CMakeLists.txt  Makefile  README.md
dependencies/glad/: glad.h
dependencies/glfw/lib/: glfw3.lib
dependencies/glfw/lib/pkgconfig/: glfw3.pc
include/: DivineArena.h  DivineCamera.h  DivineConfig.h  DivineEngine.h  DivineInput.h  DivineMath.h  DivineObject.h  config.h  input.h  math_lib.h  obj_loader.h
progs/: cube.cpp  cube.h  rotation.cpp  rotation.h  tiles.cpp  tiles.h
progs/3dScene/: scene.cpp  scene.h  scene_input.hpp
progs/Tiles/: tiles.cpp  tiles.h
resources/: CoordinateSystem.txt  Object.txt  UI.txt  ground.txt  myCube.txt  nightelf.cur  tyanka.mtl
shaders/: UI_Fragment.glsl  UI_vertex_shader.glsl  lineFragments.glsl  lineVertex.glsl  mainFragment.glsl  mainFragments.glsl  mainVertex.glsl  tilesFragments.glsl  tilesVertex.glsl
shaders/rotationShader/: rotationFragments.glsl  rotationVertex.glsl  staticFragments.glsl  staticVertex.glsl
shaders/tilesShader/: lineFragments.glsl  tilesFragments.glsl
src/: DivineArena.cpp  DivineCamera.cpp  DivineConfig.cpp  DivineEngine.cpp  DivineInput.cpp  DivineMath.cpp  DivineObject.cpp  config.cpp  glad.c  input.cpp  main.cpp  math_lib.cpp  obj_loader.cpp  tinyfiledialogs.c
